feat: Operation 대체 설비 모델 추가